# pico_tests

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test_run.yml
app/: CMakeLists.txt  main.cpp
dev/: Makefile  serial.bat
dev/boot/: boot.sh  upload.sh
pico_tests/: CMakeLists.txt
pico_tests/inc/: escape.hpp  hardware.hpp  pico_test.hpp  test_types.hpp
pico_tests/scripts/: generate_header.py
pico_tests/scripts/host/: device.py  run_tests.py
pico_tests/src/: hardware.cpp  pico_test.cpp  test_types.cpp
run/: .gitignore  Makefile  config_example.yaml  defines.py  pico_test_data.py  run.py  run_ssh.py  run_tests.py
run/dep/: __init__.py  config.py  config_example.yaml  config_local_tests.yaml  pico_test_data.py  run_common.py  run_local.py  run_ssh.py
run/dep/host_files/: run.sh  run_sudo.sh
run/dep/host_files/host/: __init__.py  __main__.py  defines.json  device.py  run_tests.py
src/: CMakeLists.txt
tests/: .gitignore  CMakeLists.txt  main.cpp
tests/tests/: tc_basic_interface.cpp  test_cases.h
tests/tests/group/: tc_group_basic.cpp
